isucon11_final/cf-template-isucon11-final.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation for ISUCON11 Final

Parameters:
  KeyPairName:
    Description: "Amazon EC2 Key Pair"
    Type: AWS::EC2::KeyPair::KeyName
  GitHubUsername:
    Description: "GitHub Username for SSH public key"
    Type: String

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "192.168.0.0/16"
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      InstanceTenancy: default
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "ap-northeast-1c"
      CidrBlock: "192.168.0.0/24"
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: False
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Security Group for ISUCON11 Final
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: -1
          CidrIp: "192.168.0.0/24"

  FinalInstance1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-00acaccebe03b5bed
      InstanceType: c5.large
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.11"
      KeyName: !Ref KeyPairName
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 20
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon11-final-1
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          GITHUB_USER=${GitHubUsername}
          mkdir -p /home/isucon/.ssh
          curl -s https://github.com/$GITHUB_USER.keys >> /home/isucon/.ssh/authorized_keys
          chown -R isucon:isucon /home/isucon/.ssh
          chmod 600 /home/isucon/.ssh/authorized_keys
          # golang version upgrade
          add-apt-repository ppa:longsleep/golang-backports -y
          apt update
          apt install golang-go -y
          echo 'export PATH=/usr/lib/go/bin:$PATH' >> ~/.bashrc
          echo 'export GOROOT=/usr/lib/go' >> ~/.bashrc
  FinalInstanceIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref FinalInstance1
  # FinalInstance2:
  #   Type: AWS::EC2::Instance
  #   Properties:
  #     ImageId: ami-00acaccebe03b5bed
  #     InstanceType: c5.large
  #     SecurityGroupIds:
  #       - !Ref SecurityGroup
  #     SubnetId: !Ref Subnet
  #     PrivateIpAddress: "192.168.0.12"
  #     KeyName: !Ref KeyPairName
  #     BlockDeviceMappings:
  #       - DeviceName: /dev/sda1
  #         Ebs:
  #           VolumeSize: 20
  #           VolumeType: gp3
  #     Tags:
  #       - Key: Name
  #         Value: isucon11-final-2
  #     UserData:
  #       Fn::Base64: !Sub |
  #         #!/bin/bash
  #         GITHUB_USER=${GitHubUsername}
  #         mkdir -p /home/isucon/.ssh
  #         curl -s https://github.com/$GITHUB_USER.keys >> /home/isucon/.ssh/authorized_keys
  #         chown -R isucon:isucon /home/isucon/.ssh
  #         chmod 600 /home/isucon/.ssh/authorized_keys
  # FinalInstanceIP2:
  #   Type: AWS::EC2::EIP
  #   Properties:
  #     Domain: vpc
  #     InstanceId: !Ref FinalInstance2
  # FinalInstance3:
  #   Type: AWS::EC2::Instance
  #   Properties:
  #     ImageId: ami-00acaccebe03b5bed
  #     InstanceType: c5.large
  #     SecurityGroupIds:
  #       - !Ref SecurityGroup
  #     SubnetId: !Ref Subnet
  #     PrivateIpAddress: "192.168.0.13"
  #     KeyName: !Ref KeyPairName
  #     BlockDeviceMappings:
  #       - DeviceName: /dev/sda1
  #         Ebs:
  #           VolumeSize: 20
  #           VolumeType: gp3
  #     Tags:
  #       - Key: Name
  #         Value: isucon11-final-3
  #     UserData:
  #       Fn::Base64: !Sub |
  #         #!/bin/bash
  #         GITHUB_USER=${GitHubUsername}
  #         mkdir -p /home/isucon/.ssh
  #         curl -s https://github.com/$GITHUB_USER.keys >> /home/isucon/.ssh/authorized_keys
  #         chown -R isucon:isucon /home/isucon/.ssh
  #         chmod 600 /home/isucon/.ssh/authorized_keys
  # FinalInstanceIP3:
  #   Type: AWS::EC2::EIP
  #   Properties:
  #     Domain: vpc
  #     InstanceId: !Ref FinalInstance3
